--- a/src/app/(frontend)/styles.css
+++ b/src/app/(frontend)/styles.css
@@ -47,7 +47,6 @@ html {
   font-size: 18px;
   line-height: 32px;
 
-  background: rgb(0, 0, 0);
   -webkit-font-smoothing: antialiased;
 }
 
@@ -63,7 +62,7 @@ body {
   line-height: 32px;
 
   margin: 0;
-  color: rgb(1000, 1000, 1000);
+  color: oklch(var(--foreground));
 
   @media (max-width: 1024px) {
     font-size: 15px;
